# skids_nano

./: .cproject  .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
components/wifi_clock_gui/: .gitignore  CMakeLists.txt  wifi_clock_gui.guiguider
components/wifi_clock_gui/custom/: custom.c  custom.h  icon_weather_0.c  icon_weather_0_sunny.h  icon_weather_10_shower.h  icon_weather_11_thundershowicon_weather_er.h  icon_weather_12_thundershower_with_hail.h  icon_weather_13_light_rain.h  icon_weather_14_moderate_rain.h  icon_weather_15_heavy_rain.h  icon_weather_16_storm.h  icon_weather_17_heavy_storm.h  icon_weather_18_severe_storm.h  icon_weather_19_ice_rain.h  icon_weather_1_clear.h  icon_weather_20_sleet.h  icon_weather_21_snow_flurry.h  icon_weather_22_light_snow.h  icon_weather_23_moderate_snow.h  icon_weather_24_heavy_snow.h  icon_weather_25_snowstorm.h  icon_weather_26_dust.h  icon_weather_27_sand.h  icon_weather_28_duststorm.h  icon_weather_29_sandstorm.h  icon_weather_30_foggy.h  icon_weather_31_haze.h  icon_weather_32_windy.h  icon_weather_33_blustery.h  icon_weather_34_hurricane.h  icon_weather_36_tornado.h  icon_weather_37_cold.h  icon_weather_4.c  icon_weather_4_cloudy.h  icon_weather_5_partly_cloudy.h  icon_weather_6_partly_cloudy.h  icon_weather_9.c  icon_weather_99_unknown.h  icon_weather_9_overcast.h
main/: CMakeLists.txt  Kconfig.projbuild  aht21.c  aht21.h  https_request_weather.c  https_request_weather.h  lv_port_fs_template.c  lv_port_fs_template.h  lv_port_indev.c  lv_port_indev.h  main.c  smart_config.c  smart_config.h  (+15 more)
(+4 files in other folders)
